# card-editor

./: README.md  card-editor.cabal  hie.yaml
.github/workflows/: test-all.yml
tui/: CHANGELOG.md  LICENSE  card-edhitor-tui.cabal
