cabal-version:      2.4
name:               card-edhitor-tui
version:            0.1.0.0
synopsis:           カードという単位でアイディアを記録、整理するエディタ

-- A longer description of the package.
-- description:
homepage:           https://github.com/amderbar/card-editor

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             amderbar
maintainer:         amderbar@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable card-edhitor-tui
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        card-edhitor-tui

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite card-edhitor-tui-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.4.0
